# Pyenspp

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: index.md  installation.md  usage.md
examples/: 1.conform.ipynb  2.spatial.ipynb  3.correction.ipynb  4.reorder.ipynb  5.verification.ipynb  best_kan_model.pth
examples/data/: chirps.nc  example_fcst.grib  example_fcst.grib.5b7b6.idx  example_obs.nc  fcst_m.nc
examples/data/shp/: Beijiang.dbf  Beijiang.shp  Beijiang.shx
src/pyenspp/: __init__.py
src/pyenspp/calibration/: __init__.py  base.py  kan.py  marginal_fitter.py  qm.py
src/pyenspp/shuffle/: __init__ .py  schaake.py
src/pyenspp/utils/: __init__.py  conform.py  features.py  normalization.py  spatial.py
src/pyenspp/verification/: metircs.py
tests/: test_pyenspp.py
